src/objects/Revenue_Share_History__c.object
<CustomObject>
    <description>To be used by the affiliate program &amp; Finance to track payments made to BC</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Share Histories</relationshipLabel>
        <relationshipName>Revenue_Share_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <inlineHelpText>Actual revenue due for the specified date (invoice amount, not paid)</inlineHelpText>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Revenue Share</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Share Immaterial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Partner Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upfront Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Renewal Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <inlineHelpText>SBD&apos;s forecasted revenue for the specified date</inlineHelpText>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <label>GL Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <inlineHelpText>Paid amount - Actual revenue received (only entered by Accounting)</inlineHelpText>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Payment Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Amount__c</fullName>
        <inlineHelpText>Accounting&apos;s forecasted revenue for the specified date</inlineHelpText>
        <label>Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>BigCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interspire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Revenue Share History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Segment__c</columns>
        <columns>Forecast_Amount__c</columns>
        <columns>Actual_Amount__c</columns>
        <columns>Plan_Amount__c</columns>
        <columns>GL_Code__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Partner_Type__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Revenue Share Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Share Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>